--- a/index.html
+++ b/index.html
@@ -19,26 +19,31 @@
   </section>
   <section class="location-section">
     <h1>Where I'm From</h1>
-    <p>_INSERT_YOUR_LOCATION_PARAGRAPH_HERE_</p>
+    <p>Originally I'm from Southeast Texas, but I've lived in Los Angeles and currently reside in Cincinnati</p>
   </section>
   <section class="questions-section">
     <h1>More About Me</h1>
     <h2>What are your favorite hobbies?</h2>
-    <p>_INSERT_YOUR_ANSWER_HERE_</p>
+    <p>I like to read and exercise.</p>
     <h2>What's your dream job?</h2>
-    <p>_INSERT_YOUR_ANSWER_HERE</p>
-    <h2>Another question?</h2>
-    <p>_INSERT_YOUR_ANSWER_HERE</p>
-    <h2>Another question?</h2>
-    <p>_INSERT_YOUR_ANSWER_HERE</p>
+    <p>Nothing specific so long as I'm traveling!</p>
   </section>
-  <footer class="content-footer">
-    <p> Say hi to me on these social networks! </p>
-    <ul class="social">
-      <li> <a href="_INSERT_GITHUB_URL_HERE_">GitHub</a></li>
-      <li><a href="_INSERT_TWITTER_URL_HERE_">Twitter</a></li>
-      <li><a href="_INSERT_GOOGLE+_URL_HERE_">Google+</a></li>
-    </ul>
+  <footer class="social">
+    <div class="content">
+      <hr>
+      <h5>Here are some links to social media</h5>
+      <ul class="icons">
+        <li class="twitter">
+          <i class="fa fa-twitter"></i>
+        </li>
+        <li class="facebook">
+          <i class="fa fa-facebook"></i>
+        </li>
+        <li class="instagram">
+          <i class="fa fa-instagram"></i>
+        </li>
+      </ul>
+    </div>
   </footer>
 </body>
 </html>
